[gd_scene load_steps=2 format=3 uid="uid://bthioh8te8ke4"]

[ext_resource type="Script" uid="uid://d04uqeq4xvgn" path="res://scenes/Menu/pause_menu.gd" id="1_1npuy"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 519.0
offset_top = 285.0
offset_right = 762.0
offset_bottom = 526.0
color = Color(0, 0, 0, 0.45882353)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 535.0
offset_top = 312.0
offset_right = 748.333
offset_bottom = 389.0
script = ExtResource("1_1npuy")

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Reprendre"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Rejouer"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Menu principal"

[node name="CheckButton" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Audio on/off"

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
